repassando a Autorização